--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "moongose": "^1.0.0",
     "sucrase": "^3.29.0"
   },
   "devDependencies": {
