--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "moongose": "^1.0.0",
+    "mongoose": "^7.0.1",
     "sucrase": "^3.29.0"
   },
   "devDependencies": {
