--- a/back-end/.eslintrc.json
+++ b/back-end/.eslintrc.json
@@ -17,6 +17,9 @@
     "plugins": ["@typescript-eslint"],
     "rules": {
         "no-console" : "off",
+        "class-methods-use-this" : "off",
+        "no-shadow" : "off",
+        "@typescript-eslint/no-explicit-any" : "off",
         "import/extensions": [
             "error",
             "ignorePackages",
