--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "ts-node-dev src/server.ts --ignore-watch node_modules "
+    "dev": "ts-node-dev src/server.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/dotenv": "^8.2.0",
+    "@types/mongoose": "^5.11.97",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
