config and CRUD of product

--- a/back-end/.env
+++ b/back-end/.env
@@ -1,1 +1,5 @@
-URL_DATABASE = mongodb+srv://VitorKreis:2KJmBr1FvpW2BSqK@cluster0.22nkstk.mongodb.net/?retryWrites=true&w=majority
+DataBase = Amazon
+DataBase_Host = 127.0.0.1
+DataBase_Port = 3306
+DataBase_UserName = root
+DataBase_Password = Vitor.4223
