--- a/back-end/.eslintrc.json
+++ b/back-end/.eslintrc.json
@@ -3,34 +3,16 @@
         "es2021": true,
         "node": true
     },
-    "extends": [
-    "airbnb-base",
-    "plugin:@typescript-eslint/recommended"
-    ],
+    "extends": ["airbnb-base", "eslint:recommended"],
     "overrides": [
     ],
-    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "plugins": ["@typescript-eslint"],
     "rules": {
         "no-console" : "off",
-        "class-methods-use-this" : "off",
-        "no-shadow" : "off",
-        "@typescript-eslint/no-explicit-any" : "off",
-        "import/extensions": [
-            "error",
-            "ignorePackages",
-            {
-              "ts": "never"
-            }
-          ]
-    },
-    "settings": {
-        "import/resolver": {
-          "typescript": {}
-        }
-      }
+        "import/first" : "off",
+        "class-methods-use-this" : "off"
+    }
 }
