--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,31 +2,27 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "Back-end do projeto",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "dev": "ts-node-dev src/server.ts"
+    "build": "",
+    "dev": "nodemon src/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/mongoose": "^5.11.97",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.3"
+    "mysql2": "^3.2.3",
+    "sequelize": "^6.31.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "eslint": "^8.37.0",
+    "eslint": "^8.38.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.4",
     "eslint-plugin-import": "^2.27.5",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.3"
+    "nodemon": "^2.0.22",
+    "sequelize-cli": "^6.6.0",
+    "sucrase": "^3.32.0"
   }
 }
