Config to send and recive imgs

--- a/back-end/.eslintrc.json
+++ b/back-end/.eslintrc.json
@@ -13,6 +13,7 @@
     "rules": {
         "no-console" : "off",
         "import/first" : "off",
-        "class-methods-use-this" : "off"
+        "class-methods-use-this" : "off",
+        "import/no-extraneous-dependencies" : "off" 
     }
 }
