--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.3",
     "sequelize": "^6.31.0"
   },
