--- a/back-end/.eslintrc.json
+++ b/back-end/.eslintrc.json
@@ -14,6 +14,7 @@
         "no-console" : "off",
         "import/first" : "off",
         "class-methods-use-this" : "off",
-        "import/no-extraneous-dependencies" : "off" 
+        "import/no-extraneous-dependencies" : "off",
+        "camelcase" : "off"
     }
 }
