Created from user router and creating session

--- a/back-end/.env
+++ b/back-end/.env
@@ -3,3 +3,6 @@ DataBase_Host = 127.0.0.1
 DataBase_Port = 3306
 DataBase_UserName = root
 DataBase_Password = Vitor.4223
+
+SecretSession = lcx,mndpuew!**&doaifhds3490483-4-=3
+SessionAge = 300000
