--- a/back-end/.env
+++ b/back-end/.env
@@ -5,4 +5,4 @@ DataBase_UserName = root
 DataBase_Password = Vitor.4223
 
 SecretSession = lcx,mndpuew!**&doaifhds3490483-4-=3
-SessionAge = 300000
+SessionAge = 86400000
