--- a/back-end/.env
+++ b/back-end/.env
@@ -4,5 +4,5 @@ DataBase_Port = 3306
 DataBase_UserName = root
 DataBase_Password = Vitor.4223
 
-SecretSession = lcx,mndpuew!**&doaifhds3490483-4-=3
-SessionAge = 86400000
+Secret = lcx,mndpuew!**&doaifhds3490483-4-=3
+Time = 86400000
