more tocs on login and nav-bar

--- a/front-end/.eslintrc.json
+++ b/front-end/.eslintrc.json
@@ -23,6 +23,8 @@
         "no-plusplus" : "off",
         "import/no-extraneous-dependencies": "off",
         "react/style-prop-object": "off",
-        "react/no-unescaped-entities" : "off"
-    }
+        "react/no-unescaped-entities" : "off",
+        "react/jsx-indent" : "off",
+        "max-len" : "off"
+     }
 }
