Done with the featch and done with the home

--- a/front-end/.eslintrc.json
+++ b/front-end/.eslintrc.json
@@ -25,6 +25,7 @@
         "react/style-prop-object": "off",
         "react/no-unescaped-entities" : "off",
         "react/jsx-indent" : "off",
-        "max-len" : "off"
+        "max-len" : "off",
+         "react/prop-types" : 0
      }
 }
