--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,6 +23,7 @@
     "react-slick": "^0.29.0",
     "save-dev": "^0.0.1-security",
     "swiper": "^9.3.2",
+    "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
