--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,6 +26,10 @@
     "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
+  "resolutions": {
+    "**/react": "18.2.0-alpha.2",
+    "**/react-dom": "18.2.0-alpha.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
